# TrendPluse

./: .env.example  .pre-commit-config.yaml  Makefile  PLAN.md  README.md  mkdocs.yml  pyproject.toml
.claude/: CLAUDE.md
.github/ISSUE_TEMPLATE/: add_repo.yml
.github/workflows/: ci.yml  daily-analysis.yml  deploy-pages.yml  process_repo_request.yml  publish.yml  release.yml
docs/: MVP_PLAN.md  PRD.md  TECH_SPEC_V2.md  TECH_SPEC_V3_INTEGRATION.md  configuration.md  features.md  github-actions-setup.md  index.md  quickstart.md
docs/reports/: index.md  report-2026-01-02.md  report-2026-01-03.md
docs/stylesheets/: extra.css
reports/: report-2026-01-02.md  report-2026-01-03.md
scripts/: add_repo.py  generate_report_index.py  repos_doc_generator.py  run.py  sync_repos_to_docs.py
src/trendpluse/: __init__.py  api.py  config.py  core.py  logger.py  main.py  pipeline.py
src/trendpluse/analyzers/: breaking_changes_detector.py  commit_analyzer.py  release_analyzer.py  signal_deduplicator.py  trend_analyzer.py
src/trendpluse/collectors/: activity.py  filter.py  gh_archive.py  github_api.py  github_events.py  releases.py
src/trendpluse/models/: signal.py
src/trendpluse/reporters/: markdown_reporter.py
tests/: conftest.py  test_api.py  test_core.py  test_logger.py  test_main.py  test_trendpluse.py
tests/unit/: test_activity_collector.py  test_add_repo.py  test_analyzer.py  test_breaking_changes_detector.py  test_collectors.py  test_commit_analyzer.py  test_config.py  test_filter.py  test_github_actions_config.py  test_github_api.py  test_github_events_collector.py  test_markdown_reporter.py  test_models.py  test_pipeline.py  test_release_analyzer.py  test_release_collector.py  test_reporter.py  test_signal_deduplicator.py
tests/unit/test_scripts/: test_repos_doc_generator.py
