[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trendpluse"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "gqy20", email = "qingyu_ge@foxmail.com" },
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.13",

]

dependencies = [
    # 核心依赖
    "anthropic>=0.45.0",
    "instructor>=1.6.0",
    "PyGithub>=2.5.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",

    # 数据采集
    "google-cloud-bigquery>=3.0.0",

    # 模板和文档
    "jinja2>=3.1.0",
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.0",

    # 工具库
    "rich>=13.0.0",
    "tenacity>=9.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",
    "python-dateutil>=2.9.0",

    # 数据处理
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "respx>=0.21.0",  # HTTP mocking
    "freezegun>=1.5.0",  # 时间 mocking
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]

[project.urls]
Homepage = "https://github.com/gqy20/trendpluse"
Repository = "https://github.com/gqy20/trendpluse.git"

[tool.hatch.build.targets.wheel]
packages = ["src/trendpluse"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["src/trendpluse"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"  # 支持 src layout
explicit_package_bases = true  # 明确使用包基路径
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
strict_optional = true

# 忽略没有 stubs 的第三方库
[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "instructor.*",
    "google.cloud.*",
    "dotenv.*",
    "aiohttp.*",
    "github.*",
    "tenacity.*",
    "dateutil.*",
    "yaml.*",
    "pytest.*",
    "pydantic_settings.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
